[package]
name = "bunwarmer"
version = "0.1.0"
description = "Tool to pre-warm aka hydrate EBS volumes"
repository = "https://github.com/thimslab/bunwarmer"
authors = ["Adam Kaminski <adam@adamkaminski.com>"]
readme = "README.md"
license = "MIT"
#build = "build.rs"
categories = ["tools", "cloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bunwarmer"
path = "src/bunwarmer/main.rs"

#[features]

[dependencies]
libc = "0.2"
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.16.2"
#rusoto_core = "0.46.0"
#rusoto_ec2 = "0.46.0"
#rusoto_credential = "0.46.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.23.0"

#[package.metadata.rust-analyzer]
